--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url("font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic|Source+Code+Pro:400");
+@import url("http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
 
 /*
 	Read Only by HTML5 UP
