--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2573,6 +2573,7 @@
 /* One */
 
 	#one:before {
+/*
 		background-image: url("../../images/banner.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
@@ -2581,6 +2582,7 @@
 		display: block;
 		height: 15em;
 		width: 100%;
+*/
 	}
 
 /* Footer */
